--- a/html/styles.css
+++ b/html/styles.css
@@ -1,4 +1,5 @@
 body {
+    width: 100%;
     background: url('./images/white.avif');
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -19,7 +20,6 @@ p {
 }
 
 .SkillList { 
-    
     display: flex;
     justify-content: center; 
     align-items: center;     
@@ -27,7 +27,6 @@ p {
     text-align: center;
     flex-direction: column; 
     font-family: "Gill Sans", sans-serif;
-
 
 ul{
     list-style-type: square;
